Fix video overflowing details

--- a/docs/.vuepress/theme/styles/custom-blocks.styl
+++ b/docs/.vuepress/theme/styles/custom-blocks.styl
@@ -49,3 +49,5 @@
     summary
       outline none
       cursor pointer
+    *
+      max-width: 100%
